[tool.poetry]
name = "mas-negotiation-and-auction-simulator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0"
jinja2 = "^3"
uvicorn = "^0"
python-multipart = "^0.0.17"

[tool.poetry.group.test.dependencies]
black = "^24"
isort = "^5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
